[gd_scene load_steps=4 format=2]

[ext_resource path="res://Testing resources/New Piskel (2).png" type="Texture" id=1]
[ext_resource path="res://trump_missile.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.1607, 13.5691 )

[node name="trump_missile" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="RocketFall" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="timeout" from="RocketFall" to="." method="_on_RocketFall_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
